--- a/app/views/workouts/_workout.html.erb
+++ b/app/views/workouts/_workout.html.erb
@@ -6,12 +6,13 @@
 
   <p>
     <strong>Date:</strong>
-    <%= workout.date %>
+    <%= workout.date.strftime('%d/%m/%Y') %>
   </p>
 
   <p>
     <strong>Exercises count:</strong>
-    <%= workout.exercises_count %>
+    <%= pluralize(workout.exercises_count, t('workouts.exercisescount')) %>
+    
   </p>
 
 </div>
